# comclic

./: README.md
client/: package.json  pnpm-lock.yaml
server/: .env  .gitignore  Pipfile  config.py  main.py  pyproject.toml  requirements.txt  run.py
server/app/: database.py  main.py  models.py  settings.py  utils.py
server/app/middlewares/: auth.py  authware.py
server/app/routers/: auth_router.py  finance.py  immunization.py  patient.py
