[tool.poetry]
name = "comclic"
version = "0.1.0"
description = ""
authors = ["Victor Mayowa"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.1"}
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
beanie = "^1.25.0"
pydantic-settings = "^2.2.1"
fastapi-jwt = "^0.2.0"
python-decouple = "^3.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bycrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
email-validator = "^2.2.0"
fastapi-mail = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
